--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "belgar-bounties",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
