Changed linebreak-style to unix

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,7 +32,7 @@
         "jsx-a11y/no-static-element-interactions": "off",
         "linebreak-style": [
             "error",
-            "windows"
+            "unix"
         ],
         "max-len": [
             "error",
