--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
 	"scripts": {
 		"start": "node server/server.js",
 		"client": "npm start --prefix client",
-		"clientinstall": "npm install --prefix client",
-		"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client && npm audit fix"
+		"clientinstall": "npm install --prefix client"
 	},
 	"keywords": [],
 	"author": "",
