--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
 	},
 	"main": "server.js",
 	"scripts": {
-		"start": "node server/server.js",
-		"client": "npm start --prefix client",
-		"clientinstall": "npm install --prefix client"
+		"start": "node server/server.js"
 	},
 	"keywords": [],
 	"author": "",
