--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,7 @@
     "lint": "eslint . --ext ts,tsx",
     "lint:fix": "eslint . --ext ts,tsx --fix",
     "client": "npm start --prefix client",
-    "clientinstall": "npm install --prefix client",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client && npm audit fix"
+    "clientinstall": "npm install --prefix client"
   },
   "eslintConfig": {
     "extends": [
