--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 	},
 	"main": "server.js",
 	"scripts": {
-		"start": "node server/server.js"
+		"start": "node server.js",
+		"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false cd client && npm install --prefix client && npm run build --prefix client && npm audit fix"
 	},
 	"keywords": [],
 	"author": "",
