--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,8 @@
     "eject": "react-scripts eject",
     "lint": "eslint . --ext ts,tsx",
     "lint:fix": "eslint . --ext ts,tsx --fix",
-    "client": "npm start --prefix client",
-    "clientinstall": "npm install --prefix client"
+    "client": "npm start",
+    "clientinstall": "npm install"
   },
   "eslintConfig": {
     "extends": [
