--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	"main": "server.js",
 	"scripts": {
 		"start": "node server.js",
-		"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false cd client && npm install --prefix client && npm run build --prefix client && npm audit fix"
+		"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false cd client && npm install&& npm run build && npm audit fix"
 	},
 	"keywords": [],
 	"author": "",
