--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
 	"main": "server.js",
 	"scripts": {
 		"start": "node server.js",
-		"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false cd client && npm install&& npm run build && npm audit fix"
+		"server": "nodemon server.js",
+		"client": "npm start --prefix client",
+		"clientinstall": "npm install --prefix client",
+		"dev": "concurrently \"npm run server\" \"npm run client\"",
+		"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client && npm audit fix"
 	},
 	"keywords": [],
 	"author": "",
@@ -17,6 +21,6 @@
 		"express": "^4.17.1"
 	},
 	"devDependencies": {
-		"nodemon": "^2.0.2"
+		"nodemon": "^2.0.7"
 	}
 }
