--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
@@ -36,6 +35,7 @@
     "@types/node": "^14.14.22",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
+    "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
