--- a/client/package.json
+++ b/client/package.json
@@ -35,10 +35,10 @@
     "@types/node": "^14.14.22",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
-    "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "sass": "^1.32.5",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
