--- a/client/package.json
+++ b/client/package.json
@@ -37,8 +37,10 @@
     "@types/node": "^14.14.22",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
+    "@types/react-router-dom": "^5.1.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "sass": "^1.32.5",
     "typescript": "^4.1.3",
